tests/basic/infer/assert/020.pan.out
tests/basic/infer/assert/020.pan:3:1-4: error: unable to verify type of f20